# a1-Rcc999-

./: .gitignore  CMakeLists.txt  README.md  ex5-biped-reflection.md  my-info.json
.github/workflows/: ci.yml
data/: trajectory.json
data/robots/pi/: pi_ball_feet.rbs  pi_real_feet.rbs
data/robots/spiderpi/: spiderpi.rbs  spiderpi.urdf
docker/: Dockerfile.ubuntu  README.md
ext/: CMakeLists.txt
scripts/spiderpi_hardware/: joint_caliberation_test.py  pybullet_replay_traj.py  run_trajectory.py  utils.py
src/: CMakeLists.txt
src/app/: app.h  robots.h
src/libs/simAndControl/kinematics/: IK_Solver.h
src/libs/simAndControl/locomotion/: FootFallPattern.h  KinematicTrackingController.h  LocomotionPlannerHelpers.h  SimpleLocomotionTrajectoryPlanner.h
src/libs/simAndControl/robot/: GeneralizedCoordinatesRobotRepresentation.cpp
src/test-a1/: CMakeLists.txt  TestResult.h  test-ex2-fd-base-dofs.cpp  test-ex2-fk-independence.cpp  test-ex2-traj-base-integration.cpp  test-ex2-traj-dt.cpp  test-ex3-analytic-all-limbs.cpp  test-ex3-analytic-base.cpp  test-id-check.cpp
